const vaihdettu let

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         }
         // alla lumisadeanimaatio 50% tod.näköisyydellä
         function lumisade() {
-            const maara = 100; // lumihiutaleiden määrä
+            let maara = 100; // lumihiutaleiden määrä
 
             for (let i = 0; i < maara; i++) {
                 let flake = document.createElement("div");
