24 luukku ei enää häviä

--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
                 }
                 if (luukunnumero == 24) {
                     window.open('24.html', '_blank');
+                    return;
                 }
                 button.style.display = "none";
             }
